RESOLVED FIXED58745
REGRESSION (r83514): Failing fast/repaint/trailing-floats-root-line-box-overflow.html
https://bugs.webkit.org/show_bug.cgi?id=58745
Summary REGRESSION (r83514): Failing fast/repaint/trailing-floats-root-line-box-overf...
mitz
Reported 2011-04-17 12:21:06 PDT
fast/repaint/trailing-floats-root-line-box-overflow.html is failing after <http://trac.webkit.org/changeset/83514>.
Attachments
Fix top/bottom-visual/layout mixup (1.88 KB, patch)
2011-04-17 13:08 PDT, mitz
joepeck: review+
mitz
Comment 1 2011-04-17 12:22:46 PDT
mitz
Comment 2 2011-04-17 13:08:31 PDT
Created attachment 89957 [details] Fix top/bottom-visual/layout mixup
Joseph Pecoraro
Comment 3 2011-04-17 13:13:51 PDT
Comment on attachment 89957 [details] Fix top/bottom-visual/layout mixup Looks easy enough! r=me
mitz
Comment 4 2011-04-17 13:25:16 PDT
Note You need to log in before you can comment on or make changes to this bug.