<rdar://problem/9296211> REGRESSION (r83514): Failing fast/repaint/trailing-floats-root-line-box-overflow.html https://bugs.webkit.org/show_bug.cgi?id=58745

Reviewed by Joseph Pecoraro.

This is really a regression from r82611, but it went unnoticed due to a mistake in r73385,
which was fixed in r83514.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutInlineChildren): Actually assign the bottom visual overflow to the
variable so named, not the top layout overflow.



Canonical link: https://commits.webkit.org/73848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84107 268f45cc-cd09-0410-ab3c-d52691b4dbfc